 =======================================================================
 ==CHANGES.txt
 =======================================================================

Gora Change Log

0.3 (trunk) Current Development:

* GORA-150 Introduce Configuration property preferred.schema.name (ferdy)

* GORA-142 Creates org.apache.gora.cassandra.serializers package in order to clean the code of store and query packages and to support additional types in future. (kazk)

* GORA-148 CassandraMapping supports only (first) keyspace and class in gora-cassandra-mapping.xml (kazk)

* GORA-143 GoraCompiler needs to add "import FixedSize" statement for FIXED type (kazk)

* GORA-147 fix threading issue caused by multiple threads trying to flush (ferdy)

* GORA-146 HBaseStore does not properly set endkey (ferdy)

* GORA-140 Requires some adjustments on dependency at gora-cassandra (kazk, lewismc)

* GORA-138 gora-cassandra array type support: Double fix for GORA-81 Replace CassandraStore#addOrUpdateField with TypeInferringSerializer to take advantage of when the value is already of type ByteBuffer. (Kazuomi Kashii via lewismc)

* GORA-139  Creates Cassandra column family with BytesType for column value validator (and comparators), instead of UTF8Type (Kazuomi Kashii via lewismc)

* GORA-131 gora-cassandra should support other key types than String (Kazuomi Kashii via lewismc)

* GORA-132 Uses ByteBufferSerializer for column value to support various data types rather than StringSerializer (Kazuomi Kashii via lewismc)

* GORA-77 Replace commons logging with Slf4j (Renato Javier Marroquín Mogrovejo via lewismc)

* GORA-134 ListGenericArray's hashCode causes StackOverflowError (Kazuomi Kashii via lewismc)

* GORA-95 Catch incorrect mapping configurations and implement sufficient logging in CassandraMapping. (lewismc)

* GORA-** Commit to fix classloading for CLI execution (lewismc)

* GORA-122 gora-accumulo/lib is not cleaned after mvn clean (lewismc)
